# material-image-processing

./: .gitignore  README.md
src/phase_detection/: CMakeLists.txt  package.xml  setup.py
src/phase_detection/data/annotations/: json_to_mask.py
src/phase_detection/data/annotations/img3/: label_names.txt
src/phase_detection/data/masks/: remap_3_classes.py
src/phase_detection/phase_detection/: dataset.py  unet_model.py
src/phase_detection/scripts/: test_phases.py  train_phases.py
